# gaugedesk

./: .dockerignore  .gitignore  Cargo.toml  NOTICE  README.md  flake.nix  mkdocs.yml
.cargo/: audit.toml
.github/workflows/: ci.yml  docs.yml  release.yml
crates/app/: Cargo.toml
crates/app/examples/: fed_chaos_driver.rs  fed_chaos_rendezvous.rs  fed_chaos_target.rs  fed_driver.rs  fed_rendezvous.rs  fed_target.rs
crates/app/src/: account.rs  account_routes.rs  advancement.rs  app_support.rs  at_rest.rs  attention.rs  attestation_verifier.rs  audit.rs  boundary_keeper.rs  challenge.rs  codex_oauth.rs  content_vault.rs  crypto_erasure.rs  device_enroll.rs  device_enroll_drive.rs  directory_sync.rs  engagement_routes.rs  engine.rs  facility.rs  facility_routes.rs  fed_harness.rs  federation.rs  federation_relay.rs  harness_select.rs  identity.rs  key_store.rs  lib.rs  library.rs  library_routes.rs  library_state.rs  lifecycle_routes.rs  local_routes.rs  main.rs  measurement_store.rs  mobile_bridge.rs  net_http.rs  net_relay.rs  net_server.rs  net_tls.rs  onboarding.rs  (+22 more)
crates/app/tests/: account.rs  federation_crossing.rs  handoff_relocation.rs  protection_chain_proptest.rs  seam_smoke.rs  two_authority_project.rs  workstream.rs
crates/boundary/: Cargo.toml
crates/boundary/src/: lib.rs
crates/core/: Cargo.toml
crates/core/proptest-regressions/: taint.txt
crates/core/src/: abac.rs  agent_version.rs  attestation.rs  billing.rs  boundary.rs  boundary_lifecycle.rs  bridge_grant.rs  content_erasure.rs  delegation.rs  deployment_entitlement.rs  device_enrollment.rs  federated_delivery.rs  federated_envelope.rs  federation.rs  freshness.rs  handoff.rs  ids.rs  instance.rs  key_release.rs  lib.rs  merge.rs  package_distribution.rs  pinned_tls.rs  public_session.rs  rbac.rs  recovery.rs  remote_call.rs  remote_session.rs  resource.rs  resource_access.rs  resource_export.rs  review.rs  revocation.rs  run.rs  runtime_session.rs  signature.rs  taint.rs  workstream.rs
crates/harness/: Cargo.toml
crates/harness/src/: egress_proxy.rs  lib.rs  sandbox.rs  sni_proxy.rs  testing.rs
crates/pi-bridge/: Cargo.toml
crates/pi-bridge/src/: lib.rs  protocol.rs
crates/pi-bridge/src/protocol/: remote.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/tracker/: Cargo.toml
crates/tracker/src/: lib.rs
crates/whip-runtime/: Cargo.toml
crates/whip-runtime/src/: lib.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: lib.rs
docs/: LICENSE.md  faq.md  getting-started.md  index.md  requirements.txt  security.md
docs/assets/: brand.css
docs/concepts/: deployment-modes.md  glossary.md  index.md  protection.md
docs/guides/admin/: identity-and-provisioning.md  index.md
docs/guides/client/: index.md  review-and-release.md  verify-before-trust.md
docs/guides/embed/: index.md
docs/guides/expert/: build-an-agent.md  index.md  package-and-deploy.md  run-and-review.md  troubleshooting.md  versioning-and-forking.md
docs/reference/: limitations.md  status.md  verifying-claims.md
docs/trust/: incident-response.md  security-operations.md  subprocessors.md  support.md
ee/: LICENSE
ee/app/: Cargo.toml
ee/app/src/: auth_oidc.rs  identity_oidc.rs  identity_saml.rs  lib.rs  org_routes.rs  scim_routes.rs
ee/app/tests/: archetype_governance.rs  oidc_authcode_live.rs  oidc_discovery_live.rs  oidc_gate_live.rs  oidc_live.rs  org_admin.rs  rbac_enforcement.rs  saml_live.rs  saml_sidecar.rs  scim.rs
ee/app/tests/fixtures/saml/: valid-response.json
ee/sidecar/saml-verify/: package-lock.json  package.json  verify.mjs
ee/sidecar/saml-verify/test/: make-fixture.mjs  verify.test.mjs
ee/web/: package-lock.json  package.json  tsconfig.enterprise-client.json  tsconfig.enterprise-ui.json  vite.apps.enterprise.config.ts
ee/web/apps/admin-console/: index.html  package.json  vite.config.ts
ee/web/e2e/features/: admin.feature
plugin/: README.md  gaugewright-plugin.ts
sidecar/: codex-oauth-login.mjs
src-tauri/: .gitignore  Cargo.toml  README.md  deep-link.desktop  tauri.bundle.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
web/: README.md  embed-example.html  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.embed-client.json  tsconfig.json  tsconfig.mobile-client.json  tsconfig.open-client.json  tsconfig.workbench-ui.json  tsconfig.workbench-web.json  vite.apps.open.config.ts  vite.config.ts  vite.embed.config.ts  vite.open.config.ts  vitest.config.ts
web/apps/: README.md
web/apps/mobile-web/: index.html  package.json  vite.config.ts
web/apps/mobile-web/src/: MobileApp.tsx  index.ts  main.tsx  mobile-control-plane.ts
web/apps/workbench-web/: package.json  vite.config.ts
web/apps/workbench-web/src/: App.tsx  main.tsx  workbench-control-plane.ts
web/e2e/: README.md  broker.sh  enterprise-control-plane.sh  fed-control-plane.sh  ports.mjs  run.mjs
web/e2e/features/: account.feature  attach.feature  audit.feature  chat-log.feature  config.feature  content-default.feature  context-panel.feature  context.feature  editor.feature  embed.feature  engagement.feature  export.feature  federation.feature  fork.feature  freshness-retry.feature  library.feature  live.feature  membrane-block.feature  merge-conflict.feature  mobile.feature  model-access.feature  modes.feature  multi-agent.feature  multi-turn.feature  onramp.feature  output-catalog.feature  panel-collapse.feature  place-picker.feature  project-home.feature  queue.feature  quick-start.feature  review.feature  round10.feature  round3.feature  round4.feature  round5.feature  round6.feature  round7.feature  round8.feature  round9.feature  (+5 more)
web/e2e/features/api/: chat.feature  merge.feature  packages.feature  protection.feature  resources.feature
web/e2e/steps/: account-steps.ts  admin-steps.ts  api-steps.ts  content-default.steps.ts  embed-steps.ts  federation-steps.ts  merge-conflict-steps.ts  mobile-steps.ts  steps.ts  version-upgrade-steps.ts
web/scripts/: gen-model-catalog.mjs
(+4 files in other folders)
