[package]
name = "gaugewright-pi-bridge"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
gaugewright-core = { path = "../core" }
gaugewright-harness = { path = "../harness" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
proptest = "1"
