[package]
name = "gaugewright-store"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "gaugewright local store: SQLite event log + records + the admission transaction (imperative shell)."

[dependencies]
gaugewright-core = { path = "../core" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
