[package]
name = "gaugewright-tracker"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Per-boundary WhippleScript tracker runtime (ADR 0075): a RuntimeKernel + WorkItemStore embedded per trust boundary for the onboarding/issue surface."

[dependencies]
# WhippleScript is embedded, not shelled out (ADR 0075 §1). Pinned to a commit
# on the public whipplescript mirror (GaugeWright ADR 0010: whipplescript-src
# private, whipplescript public/MIT). The Rust API is "internal-stability"
# (whip docs/rust-api.md), pre-1.0 with no semver contract, so we pin a rev and
# absorb churn deliberately. A git dep checks the rev out into cargo's cache; the
# HTTPS URL is public, so the public gaugedesk mirror's CI (and any external
# clone) can fetch it. The immutable public v0.4 projection carries the
# governance/IFC verifier, persistent host runtime, cancellation, governed
# forks, command admission, and native workspace substrate required by SUB-1
# through SUB-6. Provider adapters stay disabled: the tracker needs only the
# native rusqlite store and sans-IO kernel, never an agent turn.
whipplescript-kernel = { git = "https://github.com/jamesjscully/whipplescript", rev = "70be7e6107d3620e96752dc901aa55b200776b4a", default-features = false, features = ["native"] }
whipplescript-store = { git = "https://github.com/jamesjscully/whipplescript", rev = "70be7e6107d3620e96752dc901aa55b200776b4a", default-features = false, features = ["native"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
