[package]
name = "gaugewright-whip-runtime"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
gaugewright-core = { path = "../core" }
gaugewright-harness = { path = "../harness" }
base64 = "0.22"
hex = "0.4"
libc = "0.2"
sha2 = "0.10"
serde_json = "1"
whipplescript = { git = "https://github.com/jamesjscully/whipplescript", rev = "70be7e6107d3620e96752dc901aa55b200776b4a", default-features = false }

[dev-dependencies]
tempfile = "3"
