[package]
name = "gaugewright-workspace"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
# The versioned-workspace substrate AND the merge engine (SUB-6
# convergence port, 2026-07-11): whip's WorkspaceVcs over its native
# sqlite stores — branches/cuts/merge/restore/text-merge all upstream; this
# crate only adapts worktrees-on-disk and lifecycle policy. The immutable rev
# is the public v0.4 projection used by the public GaugeDesk CI path.
whipplescript-store = { git = "https://github.com/jamesjscully/whipplescript", rev = "70be7e6107d3620e96752dc901aa55b200776b4a", features = ["native"] }
# Store-file snapshots (VACUUM INTO) for export/fork, and the read-only
# peek at pre-vcs legacy stores during migration. Same version whip's
# native feature bundles, so cargo unifies them.
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
